[gd_scene load_steps=30 format=2]

[ext_resource path="res://Enemy2.gd" type="Script" id=1]
[ext_resource path="res://enemy2CollisionShape2D.gd" type="Script" id=2]
[ext_resource path="res://drill_npc_idle_1.png" type="Texture" id=3]
[ext_resource path="res://enemy2Sprite.gd" type="Script" id=4]
[ext_resource path="res://enemy2areaCollisionShape2D.gd" type="Script" id=5]
[ext_resource path="res://DigTimer.gd" type="Script" id=6]
[ext_resource path="res://DigUpTimer.gd" type="Script" id=7]
[ext_resource path="res://DelayTimer.gd" type="Script" id=8]
[ext_resource path="res://HitAreaShape2D.gd" type="Script" id=9]
[ext_resource path="res://tiles.tres" type="TileSet" id=10]
[ext_resource path="res://Enemy1.gd" type="Script" id=11]
[ext_resource path="res://fluff_idle_0.png" type="Texture" id=12]
[ext_resource path="res://Item.gd" type="Script" id=13]
[ext_resource path="res://Item.png" type="Texture" id=14]
[ext_resource path="res://ItemSprite.gd" type="Script" id=15]
[ext_resource path="res://ItemTimer.gd" type="Script" id=16]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=17]
[ext_resource path="res://glib_idle_1.png" type="Texture" id=18]
[ext_resource path="res://GlibSprite.gd" type="Script" id=19]
[ext_resource path="res://Label.gd" type="Script" id=20]
[ext_resource path="res://Label2.gd" type="Script" id=21]
[ext_resource path="res://InvincibilityTimer.gd" type="Script" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.24414, 31.7089 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2230.31, 969.43 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.93457, 31.8363 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 510.72, 32.175 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 124.031, 32.0531 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.50891, 30.1562 )

[node name="Node2D" type="Node2D"]

[node name="Enemy2" type="KinematicBody2D" parent="."]
collision_mask = 0
script = ExtResource( 1 )

[node name="enemy2CollisionShape2D" type="CollisionShape2D" parent="Enemy2"]
position = Vector2( 780.341, 417.005 )
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="enemy2Sprite" type="Sprite" parent="Enemy2"]
position = Vector2( 778.848, 413.687 )
scale = Vector2( 0.804495, 0.744682 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="enemy2detectionArea2D" type="Area2D" parent="Enemy2"]

[node name="enemy2areaCollisionShape2D" type="CollisionShape2D" parent="Enemy2/enemy2detectionArea2D"]
position = Vector2( 780.173, 415.116 )
shape = SubResource( 2 )
script = ExtResource( 5 )

[node name="DigTimer" type="Timer" parent="Enemy2"]
wait_time = 0.5
one_shot = true
script = ExtResource( 6 )

[node name="DigUpTimer" type="Timer" parent="Enemy2"]
wait_time = 0.2
one_shot = true
script = ExtResource( 7 )

[node name="DelayTimer" type="Timer" parent="Enemy2"]
one_shot = true
script = ExtResource( 8 )

[node name="enemy2HitArea" type="Area2D" parent="Enemy2"]

[node name="HitAreaShape2D" type="CollisionShape2D" parent="Enemy2/enemy2HitArea"]
position = Vector2( 782.432, 415.671 )
shape = SubResource( 3 )
script = ExtResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 509.209, 479.632 )
shape = SubResource( 4 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 767.275, 287.793 )
shape = SubResource( 5 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( 1086.6, 991.032 )
shape = SubResource( 5 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( -288.27, 607.469 )
shape = SubResource( 5 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( -640.719, 479.219 )
shape = SubResource( 5 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 1278.02, 480.574 )
shape = SubResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
format = 1
tile_data = PoolIntArray( 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458770, 0, 0, 458772, 0, 0, 655353, 0, 0, 655355, 0, 0, 655356, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0 )

[node name="Enemy1" type="KinematicBody2D" parent="."]
editor/display_folded = true
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Enemy1"]
position = Vector2( -273.266, 536.758 )
polygon = PoolVector2Array( -20.0756, -36.047, -28.2689, -15.2487, -25.1176, 0.507507, -11.8824, 38.3225, 11.4368, 38.3225, 24.6721, 1.76801, 27.8233, -15.2487, 18.3696, -36.047 )

[node name="Sprite" type="Sprite" parent="Enemy1/CollisionShape2D"]

[node name="Sprite" type="Sprite" parent="Enemy1"]
position = Vector2( -276.359, 539.742 )
texture = ExtResource( 12 )

[node name="MovementTimer" type="Timer" parent="Enemy1"]
wait_time = 3.0
autostart = true

[node name="enemy1Area2D" type="Area2D" parent="Enemy1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy1/enemy1Area2D"]
position = Vector2( -412.7, 204.123 )
polygon = PoolVector2Array( 118.154, 325.617, 118.372, 341.292, 120.078, 357.787, 120.662, 370.356, 157.457, 369.52, 158.188, 357.787, 159.326, 338.448, 159.129, 326.872, 158.188, 295.788, 138.849, 291.238, 117.803, 295.788 )

[node name="Item" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 13 )

[node name="ItemCollisionShape2D" type="CollisionShape2D" parent="Item"]
position = Vector2( 766, 145 )
shape = SubResource( 6 )

[node name="ItemSprite" type="Sprite" parent="Item"]
position = Vector2( 766.07, 145.071 )
scale = Vector2( 0.182594, 0.184651 )
texture = ExtResource( 14 )
script = ExtResource( 15 )

[node name="ItemTimer" type="Timer" parent="Item"]
wait_time = 15.0
one_shot = true
script = ExtResource( 16 )

[node name="Glib" type="KinematicBody2D" parent="."]
collision_mask = 0
script = ExtResource( 17 )

[node name="GlibCollisionShape2D" type="CollisionPolygon2D" parent="Glib"]
position = Vector2( 513.577, 419.996 )
polygon = PoolVector2Array( -26.3994, 24.8109, 21.7024, 25.2992, 15.6665, 10.6908, 14.4881, -0.537445, 6.90121, -17.2874, -1.1582, -27.1721, -1.3006, -27.0297, -10.1155, -19.1782, -14.9234, -3.39096, -9.91785, 7.71884 )

[node name="GlibSprite" type="Sprite" parent="Glib"]
position = Vector2( 511.326, 422.171 )
scale = Vector2( 0.903064, 0.978567 )
texture = ExtResource( 18 )
script = ExtResource( 19 )

[node name="Camera2D" type="Camera2D" parent="Glib"]
anchor_mode = 0
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
editor_draw_drag_margin = true

[node name="countdowntimer" type="Label" parent="Glib/Camera2D"]
margin_left = 860.0
margin_top = 11.0
margin_right = 1005.0
margin_bottom = 44.0
script = ExtResource( 20 )

[node name="countuptimer" type="Label" parent="Glib/Camera2D"]
margin_left = 19.0
margin_top = 11.0
margin_right = 154.0
margin_bottom = 45.0
script = ExtResource( 21 )

[node name="GlibArea2D" type="Area2D" parent="Glib"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Glib/GlibArea2D"]
position = Vector2( 511.912, 418.115 )
shape = SubResource( 7 )

[node name="InvincibilityTimer" type="Timer" parent="Glib"]
wait_time = 2.0
one_shot = true
script = ExtResource( 22 )
[connection signal="delay" from="Enemy2" to="Enemy2/DelayTimer" method="StartDelayTimer"]
[connection signal="digging" from="Enemy2/enemy2CollisionShape2D" to="Enemy2/DigTimer" method="startdigging"]
[connection signal="startdigging" from="Enemy2/enemy2CollisionShape2D" to="Enemy2/enemy2CollisionShape2D" method="dig"]
[connection signal="body_entered" from="Enemy2/enemy2detectionArea2D" to="Enemy2/enemy2CollisionShape2D" method="entered"]
[connection signal="timeout" from="Enemy2/DigTimer" to="Enemy2/enemy2Sprite" method="GoToPlayerSprite"]
[connection signal="timeout" from="Enemy2/DigTimer" to="Enemy2/enemy2HitArea/HitAreaShape2D" method="GoToPlayerHitArea"]
[connection signal="timeout" from="Enemy2/DigTimer" to="Enemy2/enemy2CollisionShape2D" method="GoToPlayerCollision"]
[connection signal="timeout" from="Enemy2/DigTimer" to="Enemy2/enemy2detectionArea2D/enemy2areaCollisionShape2D" method="GoToPlayerAreaCollision"]
[connection signal="timeout" from="Enemy2/DigTimer" to="Enemy2/DigUpTimer" method="startdiggingup"]
[connection signal="timeout" from="Enemy2/DigUpTimer" to="Enemy2" method="diggingup"]
[connection signal="timeout" from="Enemy2/DelayTimer" to="Enemy2/enemy2CollisionShape2D" method="dig"]
[connection signal="body_entered" from="Enemy2/enemy2HitArea" to="Glib/Camera2D/countdowntimer" method="taketime"]
[connection signal="body_entered" from="Enemy2/enemy2HitArea" to="Glib/InvincibilityTimer" method="starttimer"]
[connection signal="body_entered" from="Enemy2/enemy2HitArea" to="Glib" method="knockback"]
[connection signal="body_entered" from="Enemy2/enemy2HitArea" to="Glib/GlibSprite" method="InvincibilityFlashing"]
[connection signal="timeout" from="Enemy1/MovementTimer" to="Enemy1" method="turn"]
[connection signal="body_entered" from="Enemy1/enemy1Area2D" to="Glib/Camera2D/countdowntimer" method="taketime"]
[connection signal="body_entered" from="Enemy1/enemy1Area2D" to="Glib/InvincibilityTimer" method="starttimer"]
[connection signal="body_entered" from="Enemy1/enemy1Area2D" to="Glib" method="knockback"]
[connection signal="body_entered" from="Enemy1/enemy1Area2D" to="Glib/GlibSprite" method="InvincibilityFlashing"]
[connection signal="body_entered" from="Item" to="Item/ItemSprite" method="hideitem"]
[connection signal="body_entered" from="Item" to="Item" method="disable"]
[connection signal="body_entered" from="Item" to="Glib/Camera2D/countdowntimer" method="addtime"]
[connection signal="body_entered" from="Item" to="Item/ItemTimer" method="starttimer"]
[connection signal="timeout" from="Item/ItemTimer" to="Item/ItemSprite" method="unhideitem"]
[connection signal="timeout" from="Item/ItemTimer" to="Item" method="enable"]
[connection signal="TimesUp" from="Glib/Camera2D/countdowntimer" to="Glib/Camera2D/countuptimer" method="TimerUp"]
[connection signal="body_entered" from="Glib/GlibArea2D" to="Glib" method="knockback"]
[connection signal="body_entered" from="Glib/GlibArea2D" to="Glib" method="bumped"]
[connection signal="timeout" from="Glib/InvincibilityTimer" to="Glib/Camera2D/countdowntimer" method="resettimesubtracted"]
[connection signal="timeout" from="Glib/InvincibilityTimer" to="Glib/GlibSprite" method="StopInvincibilityFlashing"]
